fix: body overflow

--- a/src/assets/style/core/_base.styl
+++ b/src/assets/style/core/_base.styl
@@ -19,6 +19,7 @@ body {
   background-color var(--body-color)
   color var(--text-color)
   font-size $font-size-base
+  overflow-x hidden
   -moz-osx-font-smoothing grayscale
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing antialiased
